--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "react": "^19.0.0",
+    "react-day-picker": "^9.5.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.10.3",
     "tailwind-merge": "^2.6.0",
