--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,12 +28,14 @@
     "react-day-picker": "^9.5.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-markdown": "^9.0.1",
     "recharts": "^2.10.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
