--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.1",
+    "react-svg": "^16.2.0",
     "recharts": "^2.10.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
